--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
 
 
             <div class="piso">
-                <img src="./images/floor.png" alt="piso00003" class="piso-1">
-                <img src="./images/floor.png" alt="piso00003" class="piso-2">
-                <img src="./images/floor.png" alt="piso00003" class="piso-3">
+                <img src="./images/piso.png"   class="piso-1">
+                <img src="./images/piso.png"   class="piso-2">
+                <img src="./images/piso.png"   class="piso-3">
                  
             </div>
              
